--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ iframe{margin:20px 0;border-radius:12px;box-shadow:0 6px 16px rgba(0,0,0,.3)}
   <div id="pinBox">
     <h2>Enter PIN or Password</h2>
     <div class="eu_co st" style="background:#0f111a;border:0;color:#b9c2e8;padding:0 0 6px 0">
-      Password is changed every week for security.
+      Password is changed every week for security. - Last changed: Sept. 17th 2025
     </div>
     <input id="pinInput" type="password" maxlength="64" placeholder="PIN / Password">
     <br />
