--- a/index.html
+++ b/index.html
@@ -281,7 +281,27 @@ body.kb-open #refreshNotice{display:none!important}
     <!-- Soundboard -->
     <div id="soundboardPage">
       <div class="sb-grid" id="sbGrid">
-        <button class="sb-btn" data-sound="airhorn">Testing</button>
+        <button class="sb-btn" data-sound="androidbeep">Andriod</button>
+         <button class="sb-btn" data-sound="backintheday">Back in the day</button>
+          <button class="sb-btn" data-sound="bingchilling">Bing Chilling</button>
+           <button class="sb-btn" data-sound="clashroyal">Clash Royale</button>
+            <button class="sb-btn" data-sound="crickets">Crickets</button>
+              <button class="sb-btn" data-sound="crickets">Crickets</button>
+              <button class="sb-btn" data-sound="fail">Fail</button>
+              <button class="sb-btn" data-sound="getout">Get out</button>
+              <button class="sb-btn" data-sound="goofyahhsounds">Goofy ahh sounds</button>
+              <button class="sb-btn" data-sound="hogrida">Hog rida</button>
+              <button class="sb-btn" data-sound="incorrectbuzzer">Incorrect Buzzer</button>
+              <button class="sb-btn" data-sound="italianbrainrot">Italian brainrot</button>
+              <button class="sb-btn" data-sound="legobreak">Lego Breaking</button>
+              <button class="sb-btn" data-sound="lionsleep">Sleeping lion</button>
+              <button class="sb-btn" data-sound="metalpipe">Metal Pipe</button>
+              <button class="sb-btn" data-sound="ohio">Ohio</button>
+              <button class="sb-btn" data-sound="rahhh">Rahh</button>
+              <button class="sb-btn" data-sound="shutup">Shut up</button>
+              <button class="sb-btn" data-sound="text">Iphone text</button>  
+              <button class="sb-btn" data-sound="vineboom">Vine boom</button>
+              <button class="sb-btn" data-sound="what the sigma">What the sigma</button>   
       </div>
     </div>
 
